1. slider 그리기 및 구성 부분을 SliderSetting파일로 분리 2. 이미지가 바로 뜨기 위해 warm up 기능 추가 3. 현재 array의 끝에 도달할 때 미리 불러온 Array를 swap 기능 추가

--- a/FlickrSlide/Base.lproj/Main.storyboard
+++ b/FlickrSlide/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H0Y-z8-MLP">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SM9-Pg-rz4">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SM9-Pg-rz4" customClass="CustomButton" customModule="FlickrSlide" customModuleProvider="target">
                                         <rect key="frame" x="164" y="493" width="46" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
